force-app/main/default/objects/User/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <description>This field determines how the user who has been logged in.The value &quot;System&quot; means through API User and &quot;User&quot; means through UI.</description>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>