force-app/main/default/objects/User/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADRIATICS</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CCASA</fullName>
            </value>
            <value>
                <fullName>CENTRAL EUROPE</fullName>
            </value>
            <value>
                <fullName>CHILE PERU</fullName>
            </value>
            <value>
                <fullName>CHINA FINANCIAL</fullName>
            </value>
            <value>
                <fullName>CHINA RETAIL</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EUR CHANNELS</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>EUR RETAIL</fullName>
            </value>
            <value>
                <fullName>EUR SERVICES</fullName>
            </value>
            <value>
                <fullName>FRANCE BELGIUM</fullName>
            </value>
            <value>
                <fullName>GC CHINA FINANCIAL</fullName>
            </value>
            <value>
                <fullName>GC CHINA FINANCIAL CHANNEL</fullName>
            </value>
            <value>
                <fullName>GC CHINA RETAIL</fullName>
            </value>
            <value>
                <fullName>GC HK TAIWAN</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>GREATER CHINA</fullName>
            </value>
            <value>
                <fullName>HK TAIWAN</fullName>
            </value>
            <value>
                <fullName>IBERIA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>ITALY</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>