force-app/main/default/objects/User/fields/Area_VP_QuickLook__c.field-meta.xml
<CustomField>
    <fullName>Area_VP_QuickLook__c</fullName>
    <label>Area VP QuickLook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>