force-app/main/default/objects/User/fields/AUS_IBG__c.field-meta.xml
<CustomField>
    <fullName>AUS_IBG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CATM - Checkbox to determine if User is AUS IBG</description>
    <label>AUS IBG?</label>
    <type>Checkbox</type>
</CustomField>