force-app/main/default/objects/User/fields/CardtronicsId__c.field-meta.xml
<CustomField>
    <fullName>CardtronicsId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CardtronicsId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>