force-app/main/default/objects/User/fields/CATM_Region__c.field-meta.xml
<CustomField>
    <fullName>CATM_Region__c</fullName>
    <description>CATM</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>