force-app/main/default/objects/User/fields/Certificate_Comments__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Comments__c</fullName>
    <description>For My Trailhead</description>
    <label>Certificate Comments</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>