force-app/main/default/objects/User/fields/CPQ_Pilot__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User is participating in the Salesforce CPQ Pilot</description>
    <label>CPQ Pilot</label>
    <type>Checkbox</type>
</CustomField>