force-app/main/default/objects/User/fields/Di_Account__c.field-meta.xml
<CustomField>
    <fullName>Di_Account__c</fullName>
    <label>Di Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>