force-app/main/default/objects/User/fields/DI_Fi_Name__c.field-meta.xml
<CustomField>
    <fullName>DI_Fi_Name__c</fullName>
    <label>DI Fi Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>