force-app/main/default/objects/User/fields/Discount_Role__c.field-meta.xml
<CustomField>
    <fullName>Discount_Role__c</fullName>
    <description>This field is used for discount approval process for CPQ.</description>
    <label>Discount Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>RVP</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>