force-app/main/default/objects/User/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
                <isActive>false</isActive>
                <label>Entertainment</label>
            </value>
            <value>
                <fullName>Services</fullName>
                <isActive>false</isActive>
                <label>Services</label>
            </value>
            <value>
                <fullName>Travel and Gaming</fullName>
                <isActive>false</isActive>
                <label>Travel and Gaming</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>