force-app/main/default/objects/User/fields/Division_VP_QuickLook__c.field-meta.xml
<CustomField>
    <fullName>Division_VP_QuickLook__c</fullName>
    <label>Division VP QuickLook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>