force-app/main/default/objects/User/fields/Do_Not_Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, then this user will not get deactivated even if its Quicklook id is not found in active directory.</description>
    <label>Do Not Deactivate</label>
    <type>Checkbox</type>
</CustomField>