force-app/main/default/objects/User/fields/Global_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_ID__c</fullName>
    <label>User Global ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>