force-app/main/default/objects/User/fields/Growth_reward_gold_and_platinum_only__c.field-meta.xml
<CustomField>
    <fullName>Growth_reward_gold_and_platinum_only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Growth reward gold and platinum only</label>
    <type>Checkbox</type>
</CustomField>