force-app/main/default/objects/User/fields/ICM_User__c.field-meta.xml
<CustomField>
    <fullName>ICM_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICM User</label>
    <type>Checkbox</type>
</CustomField>