force-app/main/default/objects/User/fields/Incentive_Plan__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Plan__c</fullName>
    <label>Incentive Plan</label>
    <length>4</length>
    <type>Text</type>
</CustomField>