force-app/main/default/objects/User/fields/Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked if the user is a Manager or Area VP or Division VP or Region VP.</description>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>