force-app/main/default/objects/User/fields/Is_Solution_Quota__c.field-meta.xml
<CustomField>
    <fullName>Is_Solution_Quota__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in iPaaS for Solution Quota syncing from Anaplan.</description>
    <label>Is Solution Quota</label>
    <type>Checkbox</type>
</CustomField>