force-app/main/default/objects/User/fields/IsBPMUser__c.field-meta.xml
<CustomField>
    <fullName>IsBPMUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBPMUser</label>
    <type>Checkbox</type>
</CustomField>