force-app/main/default/objects/User/fields/IsManager_In_Workday__c.field-meta.xml
<CustomField>
    <fullName>IsManager_In_Workday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Checkbox will be checked true if the user is a simple manager. This filed is used in Sales Order Reporting.</description>
    <label>IsManager In Workday</label>
    <type>Checkbox</type>
</CustomField>