force-app/main/default/objects/User/fields/Job_Family_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Family_Code__c</fullName>
    <description>This field is used in Sales Order Reporting.</description>
    <label>Job Family Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>