force-app/main/default/objects/User/fields/Job_Role_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Start_Date__c</fullName>
    <label>Job Role Start Date</label>
    <type>Date</type>
</CustomField>