force-app/main/default/objects/User/fields/L2_Industry__c.field-meta.xml
<CustomField>
    <fullName>L2_Industry__c</fullName>
    <description>This field is used in Sales Order Reporting.</description>
    <label>L2 Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>