force-app/main/default/objects/User/fields/L4_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>L4_Sub_Region__c</fullName>
    <description>This field is used in Sales Order Reporting.</description>
    <label>L4 Sub Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>