force-app/main/default/objects/User/fields/License_Cost_Covered_by_Bulk_PO__c.field-meta.xml
<CustomField>
    <fullName>License_Cost_Covered_by_Bulk_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>License is part of a group of licenses specifically purchased for a defined group.</description>
    <label>License Cost Covered by Bulk PO</label>
    <type>Checkbox</type>
</CustomField>