force-app/main/default/objects/User/fields/License_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>License_Entitlement__c</fullName>
    <label>License Entitlement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chatter Free</fullName>
            </value>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>Customer Advocacy</fullName>
            </value>
            <value>
                <fullName>Global Sales</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>ISG-Marketing</fullName>
            </value>
            <value>
                <fullName>ISG-Mobiqa</fullName>
            </value>
            <value>
                <fullName>ISG-Retail Marketing</fullName>
            </value>
            <value>
                <fullName>ISG-Solution Mgt</fullName>
            </value>
            <value>
                <fullName>Partner Portal-Full</fullName>
            </value>
            <value>
                <fullName>Partner Portal-Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>