force-app/main/default/objects/User/fields/License_Group__c.field-meta.xml
<CustomField>
    <fullName>License_Group__c</fullName>
    <inlineHelpText>Please designate the specific group team where this license will be aligned. 
SMB: Hospitality SMB User.
PS License: Professional Services User.
NCR Support: Service Cloud License. 
Other: User falls under OTHER group not listed.</inlineHelpText>
    <label>License Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB License</fullName>
            </value>
            <value>
                <fullName>PS License</fullName>
            </value>
            <value>
                <fullName>NCR Support License</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>