force-app/main/default/objects/User/fields/Manager_Level_02__c.field-meta.xml
<CustomField>
    <fullName>Manager_Level_02__c</fullName>
    <description>This field is used in Sales Order Reporting.</description>
    <label>Manager Level 02</label>
    <length>50</length>
    <type>Text</type>
</CustomField>