force-app/main/default/objects/User/fields/Manager_Level_03_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_Level_03_ID__c</fullName>
    <description>This field is used in Sales Order Reporting.</description>
    <label>Manager Level 03 ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>