force-app/main/default/objects/User/fields/Managers_LOB__c.field-meta.xml
<CustomField>
    <fullName>Managers_LOB__c</fullName>
    <formula>Text(Manager.LOB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managers LOB</label>
    <type>Text</type>
</CustomField>