force-app/main/default/objects/User/fields/Market_development_funds_MDF__c.field-meta.xml
<CustomField>
    <fullName>Market_development_funds_MDF__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Market development funds (MDF)</label>
    <type>Checkbox</type>
</CustomField>