force-app/main/default/objects/User/fields/NCR_Department__c.field-meta.xml
<CustomField>
    <fullName>NCR_Department__c</fullName>
    <label>NCR Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>