force-app/main/default/objects/User/fields/NCR_Maps_Privacy_Notice_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>NCR_Maps_Privacy_Notice_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCR Maps Privacy Notice Acknowledged</label>
    <type>Checkbox</type>
</CustomField>