force-app/main/default/objects/User/fields/Notification_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Send_Date__c</fullName>
    <label>Notification Send Date</label>
    <type>Date</type>
</CustomField>