force-app/main/default/objects/User/fields/Partner_Community_Login__c.field-meta.xml
<CustomField>
    <fullName>Partner_Community_Login__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.su?oid=00D0300000075fO&amp;sunetworkid=0DB0g000000XZpZ&amp;sunetworkuserid=&quot;+ Id,  Contact.Full_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Community Login</label>
    <type>Text</type>
</CustomField>