force-app/main/default/objects/User/fields/Partner_Owned_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Partner_Owned_Accounts__c</fullName>
    <inlineHelpText>Comma Separated list Of accounts MCN Owned by Partner User.</inlineHelpText>
    <label>Partner Owned Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>