force-app/main/default/objects/User/fields/Payments_JetPay__c.field-meta.xml
<CustomField>
    <fullName>Payments_JetPay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Licenses purchased for JetPay, Payments team purchased 30 licenses.  If/when transfered, uncheck box.</description>
    <label>Payments (JetPay) User</label>
    <type>Checkbox</type>
</CustomField>