force-app/main/default/objects/User/fields/Percent_revenue_net_new_customers__c.field-meta.xml
<CustomField>
    <fullName>Percent_revenue_net_new_customers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Percent revenue net new customers</label>
    <type>Checkbox</type>
</CustomField>