force-app/main/default/objects/User/fields/pics__c.field-meta.xml
<CustomField>
    <fullName>pics__c</fullName>
    <label>pics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>