force-app/main/default/objects/User/fields/qtc_Payment_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>qtc_Payment_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Team Member</label>
    <type>Checkbox</type>
</CustomField>