force-app/main/default/objects/User/fields/Region_OCR_Team__c.field-meta.xml
<CustomField>
    <fullName>Region_OCR_Team__c</fullName>
    <description>This field is used in Sales Order Reporting.</description>
    <label>Owner Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>