force-app/main/default/objects/User/fields/Region_VP__c.field-meta.xml
<CustomField>
    <fullName>Region_VP__c</fullName>
    <description>This field is created for Manager Hierarchy requirement.</description>
    <label>Region VP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>