force-app/main/default/objects/User/fields/Region_VP_QuickLook__c.field-meta.xml
<CustomField>
    <fullName>Region_VP_QuickLook__c</fullName>
    <label>Region VP QuickLook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>