force-app/main/default/objects/User/fields/RoR_Update_date__c.field-meta.xml
<CustomField>
    <fullName>RoR_Update_date__c</fullName>
    <description>Date/Time stamp of when RoR interface last modified this record</description>
    <label>RoR Update date</label>
    <type>DateTime</type>
</CustomField>