force-app/main/default/objects/User/fields/Row_ID__c.field-meta.xml
<CustomField>
    <fullName>Row_ID__c</fullName>
    <description>This field is used in Sales Order Reporting</description>
    <displayFormat>{00000}</displayFormat>
    <label>Row ID</label>
    <type>AutoNumber</type>
</CustomField>