force-app/main/default/objects/User/fields/SFDC_Test__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Test__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>