force-app/main/default/objects/User/fields/SMB_User_License__c.field-meta.xml
<CustomField>
    <fullName>SMB_User_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>150 licenses were purchased for the SMB HOSP team on 9/1/2021</description>
    <inlineHelpText>Check the box if the User is SMB HOSP</inlineHelpText>
    <label>SMB User License</label>
    <type>Checkbox</type>
</CustomField>