force-app/main/default/objects/User/fields/Team_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Email__c</fullName>
    <formula>Team_Lead__r.Email</formula>
    <label>Team Lead Email</label>
    <type>Text</type>
</CustomField>