force-app/main/default/objects/User/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <formula>(today()- Joining_Date__c)/ 365</formula>
    <label>Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>