force-app/main/default/objects/User/fields/Tier_attainment_annual_revenue__c.field-meta.xml
<CustomField>
    <fullName>Tier_attainment_annual_revenue__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tier attainment annual revenue</label>
    <type>Checkbox</type>
</CustomField>