force-app/main/default/objects/User/validationRules/LOB_Can_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>LOB_Can_not_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Text(LOB__c) =&apos;&apos;,
$Profile.Name &lt;&gt;&quot;02 NSC Administrator&quot;,
$Profile.Name &lt;&gt;&quot;04 NSC UI Administrator&quot;,
User_Profile__c &lt;&gt;&quot;90 Chatter Free&quot;,
User_Profile__c &lt;&gt;&quot;91 Chatter Free Moderator&quot;,
User_Profile__c&lt;&gt;&quot;99 Chatter Only Custom&quot;,
User_Profile__c&lt;&gt;&quot;Chatter External User&quot;,
User_Profile__c&lt;&gt;&quot;Chatter Free User&quot;,
User_Profile__c&lt;&gt;&quot;Chatter Moderator User&quot;,
User_Profile__c&lt;&gt;&quot;Chatter Only User&quot;
)</errorConditionFormula>
    <errorDisplayField>LOB__c</errorDisplayField>
    <errorMessage>LOB can not be blank</errorMessage>
</ValidationRule>